--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 	transition:.5s;
 	transition-timing-function:cubic-bezier(0.25, 0.8, 0.71, 0.75);
 	transform: scale(1.0) rotateX(0deg);
-	padding:50px 20px;
+	padding:0px 20px;
 	border-radius: 30px;
 	transform-origin: bottom;
 	position: relative;
@@ -314,12 +314,13 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 }
 
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder:after{
-    position: relative;
+    position: absolute;
     display: inline-block;
 	content: "";
 	background: #ffffff;
 	width: 154px;
-	transform:translate(0px, -279px);
+	top: 0;
+	left: 31%;
 	height: 25px;
 	z-index:1;
 	border-radius:0 0 50px 50px;
@@ -331,15 +332,15 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder .upper{
 	width: 100%;
 	display: inline-block;
-	padding: 0;
-	height:100%;
+	padding: 10% 0 0 ;
+	height:80%;
 	transition: .3s;
 }
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder .lower{
 	width: 100%;
 	display: inline-block;
-	padding: 0;
-	height: 50%;
+	padding: 1%;
+	height: 20%;
 }
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder .upper img{
 	display: inline-block;
@@ -358,6 +359,12 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 }
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder .lower a{
 	text-decoration: none;
+	text-decoration: none;
+    background: #f9c5d5;
+    display: inline-block;
+    box-shadow: 0 10px 20px #f2789f;
+    border-radius: 50px;
+    padding: 8px 14px;
 
 }
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder .lower a > button{
@@ -370,7 +377,24 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 	cursor: pointer;
 }
 
+.my {
+    width:90%;
+    height:0;
+    background:#f999b7;
+    transition:.5s ease-in-out; /* Transition on all properties with 0.5 seconds duration and ease timing function */
+    border-radius: 50px;
+    position: fixed;
+    top:0;
+    left:5%;
+    pointer-events: none;
+}
 
+.intro {
+   
+   pointer-events:auto;
+   height:90%;
+}
+.a{top: -50%; transition: .5s }
 
 
 
@@ -418,9 +442,11 @@ main .nav-bar{
 	left: 0;
 	position: fixed;
 	text-align: center;
-	bottom: 20px;
+	bottom:1%;
 	z-index: 12222;
 }
+
+
 main .nav-bar .list-1{
 	display: inline-block;
 	margin: 0;
@@ -505,7 +531,7 @@ main .nav-bar .list-1 .limb a{
 main .nav-bar .list-1 .limb a .yup{height:40%;width: 100%;filter: drop-shadow( -1px 6px 10px);padding: 7PX 0;}
 main .nav-bar .list-1 .limb a span{transform: translate(0,100px); display: inline-block; transition: .5S; height: 60%;}
 
-
+main .b{bottom: -50% !important; transition: .5S }
 
 
 
