--- a/css/style.css
+++ b/css/style.css
@@ -314,14 +314,13 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 }
 
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder:after{
-    position: absolute;
+    position: relative;
     display: inline-block;
 	content: "";
 	background: #ffffff;
 	width: 154px;
-	top: 0;
-	left: 31%;
-	height: 25px;
+    transform: translate(0px, -254px);
+	height: 26px;
 	z-index:1;
 	border-radius:0 0 50px 50px;
 	box-shadow: inset 12px 12px 24px #f9c5d5;
@@ -332,7 +331,7 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder .upper{
 	width: 100%;
 	display: inline-block;
-	padding: 10% 0 0 ;
+	padding: 13% 0 0 ;
 	height:80%;
 	transition: .3s;
 }
@@ -377,23 +376,48 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder
 	cursor: pointer;
 }
 
-.my {
+main .my {
     width:90%;
     height:0;
     background:#f999b7;
     transition:.5s ease-in-out; /* Transition on all properties with 0.5 seconds duration and ease timing function */
     border-radius: 50px;
     position: fixed;
-    top:0;
+    top:5%;
     left:5%;
     pointer-events: none;
+    padding: 0;
+    overflow: auto;
+    display: none;
+    overflow-y:hidden ;
+    
 }
-
-.intro {
+main .intro {
    
    pointer-events:auto;
    height:90%;
+   padding: 3% 0;
+
 }
+main .my .sub-holder2{
+	width: 127%;
+	height:90%;
+	display: inline-block;
+	list-style: none;
+	margin: 0;
+
+
+
+}
+main .my .sub-holder2 li{
+	width:18% ;
+	height:100%;
+	display: inline-block;
+	background: #ed6e96;
+	border-radius: 50px;
+	margin:0 1% 0 0;
+}
+
 .a{top: -50%; transition: .5s }
 
 
@@ -621,11 +645,11 @@ main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide.slick-curre
 	opacity: 1;
 	z-index: 0;
 }
-main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder:after{
+/*main .sec-1 .vertical-center-3 .slick-list .slick-track .slick-slide div .holder .sub-holder:after{
 	width: 153px;
 	transform: translate(0px, -279px);
 	height: 25px;
-}
+}*/
 
 main .sec-1 .vertical-center-3 .slick-dots{
 	top: -378px;
